Fix jump on div swap

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -34,7 +34,7 @@ $govuk-header-border-color: #00728F !important;
 }
 
 .app-width-container--wide {
-  
+  height: 760px;
   padding: 0 govuk-spacing(0);
   margin: 0;
   text-align: center;
